WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116479
REGRESSION: Null pointer deference in WebCore::AppendNodeCommand::create
https://bugs.webkit.org/show_bug.cgi?id=116479
Summary
REGRESSION: Null pointer deference in WebCore::AppendNodeCommand::create
Ryosuke Niwa
Reported
2013-05-20 17:42:30 PDT
We should merge
https://chromium.googlesource.com/chromium/blink/+/5cb43002a44f67a60ecf5a7ed76de2d0bcf89eb2
Attachments
Fixes the bug
(4.24 KB, patch)
2013-05-20 18:12 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-05-20 17:46:35 PDT
http://crbug.com/177470
Ryosuke Niwa
Comment 2
2013-05-20 18:12:52 PDT
Created
attachment 202337
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2013-05-20 18:14:34 PDT
I can reproduce the crash.
Radar WebKit Bug Importer
Comment 4
2013-05-20 18:14:45 PDT
<
rdar://problem/13945311
>
Andreas Kling
Comment 5
2013-05-20 19:56:46 PDT
Comment on
attachment 202337
[details]
Fixes the bug r=me
WebKit Commit Bot
Comment 6
2013-05-20 20:17:56 PDT
Comment on
attachment 202337
[details]
Fixes the bug Clearing flags on attachment: 202337 Committed
r150402
: <
http://trac.webkit.org/changeset/150402
>
WebKit Commit Bot
Comment 7
2013-05-20 20:17:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug